fix(tooltip): add overflow-wrap: break-word on the tooltip

--- a/src/style/tooltip.scss
+++ b/src/style/tooltip.scss
@@ -15,3 +15,7 @@
 .tippy-box[data-theme~='wcs'][data-placement^='right'] > .tippy-arrow::before {
     border-right-color: var(--wcs-black);
 }
+
+.tippy-content {
+    overflow-wrap: break-word;
+}
